--- a/week-2/task-3/task3-2/Makefile
+++ b/week-2/task-3/task3-2/Makefile
@@ -19,4 +19,5 @@ build:
 	$(CC) -Wall -g -O0 -c $(INC) -o obj/Engine.o src/Engine.cpp
 	$(CC) -Wall -g -O0 -c $(INC) -o obj/Passenger.o src/Passenger.cpp
 	$(CC) -Wall -g -O0 -c $(INC) -o obj/main.o src/main.cpp
-	$(CC) -g -O0 -o bin/main obj/Car.o obj/main.o obj/Engine.o obj/Passenger.o
+	$(CC) -Wall -g -O0 -c $(INC) -o obj/Main.o src/Main.cpp
+	$(CC) -g -O0 -o bin/main obj/Car.o obj/Main.o obj/Engine.o obj/Passenger.o obj/main.o
