--- a/week-12 /task1/Makefile
+++ b/week-12 /task1/Makefile
@@ -1,37 +1,40 @@
+# Папка для сборки
 BUILD_DIR := build
 
+# Исполнимые файлы
+MAIN_EXEC := prime_finder  # Измените на имя вашего исполняемого файла
 
-MAIN_EXEC := prime_calculator
-
-
+# Путь к CMake
 CMAKE := cmake
 MAKE := make
 
+# Создание директории build, если она не существует
 $(BUILD_DIR):
 	@echo "Создание директории $(BUILD_DIR)"
 	mkdir -p $(BUILD_DIR)
 
+# Запуск CMake и сборка
 $(BUILD_DIR)/Makefile: $(BUILD_DIR)
 	@echo "Запуск CMake..."
 	cd $(BUILD_DIR) && $(CMAKE) ..
 
+# Сборка проекта
 all: $(BUILD_DIR)/Makefile
 	@echo "Сборка проекта..."
 	cd $(BUILD_DIR) && $(MAKE)
 
+# Запуск основного приложения
 run: all
-	@echo "Запуск $(MAIN_EXEC)..."
-	./$(BUILD_DIR)/$(MAIN_EXEC) $(ARGS)
+	@echo "Запуск ${MAIN_EXEC}..."
+	./$(BUILD_DIR)/$(MAIN_EXEC)
 
+# Полный цикл: сборка и запуск приложения
 build_and_run: all run
 
+# Очистка всех сгенерированных файлов и папок
 clean:
 	@echo "Очистка..."
 	rm -rf $(BUILD_DIR)
 
-clear: clean
-
-.PHONY: all run clean build_and_run clear
-
-
+.PHONY: all run clean build_and_run
 
